// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill: should pass through additional props 1`] = `
<span
  className="Pill__staticPill"
  custom-prop={true}
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
</span>
`;

exports[`Pill: should render a child component 1`] = `
<span
  className="Pill__staticPill"
>
  <Text
    baseline={false}
    raw={true}
  >
    <ChildComponent />
  </Text>
</span>
`;

exports[`Pill: should render a static pill 1`] = `
<span
  className="Pill__staticPill"
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
</span>
`;

exports[`Pill: should render an additional class for the interactive pill 1`] = `
<span
  className="test-class Pill__interactivePill"
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
  <button
    className="Pill__removeButton"
    onClick={[Function]}
    type="button"
  >
    <ScreenReaderOnly
      component="span"
    >
      Remove item 
      I am a pill
    </ScreenReaderOnly>
    <div
      className="Pill__removeCircle"
    >
      <CrossIcon
        className="Pill__removeIcon"
        svgClassName="Pill__removeSvg"
      />
    </div>
  </button>
</span>
`;

exports[`Pill: should render an additional class for the static pill 1`] = `
<span
  className="test-class Pill__staticPill"
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
</span>
`;

exports[`Pill: should render an interactive pill 1`] = `
<span
  className="Pill__interactivePill"
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
  <button
    className="Pill__removeButton"
    onClick={[Function]}
    type="button"
  >
    <ScreenReaderOnly
      component="span"
    >
      Remove item 
      I am a pill
    </ScreenReaderOnly>
    <div
      className="Pill__removeCircle"
    >
      <CrossIcon
        className="Pill__removeIcon"
        svgClassName="Pill__removeSvg"
      />
    </div>
  </button>
</span>
`;

exports[`Pill: should render an interactive pill with the legacy "text" prop 1`] = `
<span
  className="Pill__interactivePill"
>
  <Text
    baseline={false}
    raw={true}
  >
    I am a pill
  </Text>
  <button
    className="Pill__removeButton"
    onClick={[Function]}
    type="button"
  >
    <ScreenReaderOnly
      component="span"
    >
      Remove item 
      I am a pill
    </ScreenReaderOnly>
    <div
      className="Pill__removeCircle"
    >
      <CrossIcon
        className="Pill__removeIcon"
        svgClassName="Pill__removeSvg"
      />
    </div>
  </button>
</span>
`;

exports[`Pill: should support the legacy "text" prop 1`] = `
<span
  className="Pill__staticPill"
>
  <Text
    baseline={false}
    raw={true}
  >
    <ChildComponent />
  </Text>
</span>
`;
